# lab_2_oop

./: CMakeLists.txt  gtests.cpp  main.cpp  seven.h
include/: seven.h
src/: seven.cpp
